Reviewer:  Self Bug:  PRD Comments:  Changes for Filr Axion (2.0) development.  {9th} 1. Continued owrk on the admin console's limit user visibility feature.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/GwtTeamingMessages.java
M    gwt/src/org/kablink/teaming/gwt/client/GwtTeamingMessages.properties
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/DataTableFolderViewBase.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/EntryMenuPanel.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/folderdata/FolderRow.java
A    gwt/src/org/kablink/teaming/gwt/client/datatable/LimitedUserVisibilityCell.java
A    gwt/src/org/kablink/teaming/gwt/client/datatable/LimitedUserVisibilityColumn.java
M    gwt/src/org/kablink/teaming/gwt/client/datatable/VibeDataTableConstants.java
M    gwt/src/org/kablink/teaming/gwt/client/event/EventHelper.java
A    gwt/src/org/kablink/teaming/gwt/client/event/SetSelectedPrincipalsLimitedUserVisibilityEvent.java
M    gwt/src/org/kablink/teaming/gwt/client/event/TeamingEvents.java
A    gwt/src/org/kablink/teaming/gwt/client/rpc/shared/SetLimitedUserVisibilityRpcResponseData.java
M    gwt/src/org/kablink/teaming/gwt/client/rpc/shared/SetUserVisibilityCmd.java
A    gwt/src/org/kablink/teaming/gwt/client/util/LimitedUserVisibilityInfo.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
M    gwt/src/org/kablink/teaming/gwt/server/GwtRpcServiceImpl.java
M    gwt/src/org/kablink/teaming/gwt/server/util/GwtMenuHelper.java
M    gwt/src/org/kablink/teaming/gwt/server/util/GwtUserVisibilityHelper.java
M    web/docroot/WEB-INF/messages/messages.properties

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
@@ -227,6 +227,8 @@
 		.vibe-dataTableItem-Img                   {vertical-align: middle; margin-right: 2px;}
 		.vibe-dataTableLink-hover                 {color: #135c8f !important; cursor: pointer; background-color: #cce9ee; -moz-border-radius: 3px; border-radius: 3px; -webkit-border-radius: 3px; padding: 2px;}
 		.vibe-dataTableLink-hoverNoLPad           {}
+		.vibe-dataTableLUV-hover                  {color: #135c8f !important; cursor: pointer; background: #cce9ee; -moz-border-radius: 3px; border-radius: 3px; -webkit-border-radius: 3px; padding: 2px;}
+		.vibe-dataTableLUV-title                  {cursor: pointer; color: #036f9f !important; padding: 2px;}
 		.vibe-dataTableMobileDevices-bubble       {color: #036f9f; font-size: 12px; font-weight: bold; padding-top: 4px; padding-bottom: 5px; padding-left: 8px; padding-right: 8px; text-align: center; display: inline;}
 		.vibe-dataTableMobileDevices-bubbleBig    {background: url(images/devices_25_wide.png) no-repeat scroll center center transparent;}
 		.vibe-dataTableMobileDevices-bubbleSmall  {background: url(images/devices_25.png)      no-repeat scroll center center transparent;}
